# FLBench

./: LICENSE  README.md  benchmark_fl.sh  cuda_test.py  federated_learning.py  federated_simulation.py  fl_benchmark_results.md  local_timing.py  measure_local_compute.py  plot_graph.py  prefix_fedavg.py  pyproject.toml  requirement.txt  results_cifar10.txt  results_mnist.txt  run_local_timing_demo.sh  run_simulation.sh  run_timing.sh  table1_results.md  timing_results.txt  utils.py
simulation_app/: client_app.py  dataset.py  model.py  server.py  server_app.py  strategy.py  utils.py
