[project]
name = "flower-cifar-example"
version = "0.1.0"
description = "A Flower federated learning example with PyTorch and CIFAR-10."
authors = [{ name = "dohuni391" }]
requires-python = ">=3.8"
dependencies = [
    "flwr[simulation]",
    "torch",
    "torchvision",
    "flwr-datasets",
]

[tool.flwr.app]
# Add the required publisher field
publisher = "dohuni391"

[tool.flwr.app.components]
# Define the server and client components
serverapp = "simulation_app.server_app:app"
clientapp = "simulation_app.client_app:app"

[tool.flwr.run.config]
# This section holds the default configuration for a run.
# You can override these values from the command line.
# Example: flwr run . --run-config "num_clients=50 dataset_name='mnist'"

# --- Simulation settings ---
num_clients = 10
num_rounds = 3
fraction_fit = 1.0 # Sample all clients in each round

# --- Dataset and Model settings ---
dataset_name = "cifar10" # Can be "mnist", "cifar10", or "femnist"
batch_size = 32

# --- Client-side training settings ---
local_epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU